--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -410,6 +410,8 @@ services:
       - ./volumes/db/logs.sql:/docker-entrypoint-initdb.d/migrations/99-logs.sql:Z
       # Changes required for Pooler support
       - ./volumes/db/pooler.sql:/docker-entrypoint-initdb.d/migrations/99-pooler.sql:Z
+      # Changes required for PowerSync support
+      - ./volumes/db/powersync.sql:/docker-entrypoint-initdb.d/migrations/99-powersync.sql:Z
       # Use named volume to persist pgsodium decryption key between restarts
       - db-config:/etc/postgresql-custom
     healthcheck:
